--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-ripples": "^2.2.1",
     "swiper": "^11.1.8",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
