--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-ripples": "^2.2.1",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.8",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tw-elements": "^2.0.0"
